Add functionality to customer and admin on products.

--- a/MarketWeb/Areas/Customer/Views/Home/Index.cshtml
+++ b/MarketWeb/Areas/Customer/Views/Home/Index.cshtml
@@ -3,9 +3,9 @@
     ViewData["Title"] = "Home Page";
 }
 
-<form method="get" asp-action="List" asp-controller="Products">
+<form method="get" asp-action="List" asp-controller="Product">
     <div class="input-group">
-        <input class="form-control" @*asp-for="SearchQuery"*@ style="width: 800px;">
+        <input class="form-control" asp-for="SearchQuery" style="width: 800px;">
         <div class="input-group-append">
             <button class="btn btn-primary" type="submit">Search</button>
         </div>
