--- a/MarketWeb/Areas/Customer/Views/Product/List.cshtml
+++ b/MarketWeb/Areas/Customer/Views/Product/List.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ProductsListViewModel
 
 
-<form method="get" asp-action="List" asp-controller="Products">
+<form method="get" asp-action="List" asp-controller="Product">
     <div class="input-group">
         <input class="form-control" asp-for="SearchQuery" style="width: 800px;">
         <div class="input-group-append">
