--- a/MarketWeb/Views/Shared/_ProductCard.cshtml
+++ b/MarketWeb/Views/Shared/_ProductCard.cshtml
@@ -7,7 +7,7 @@
         <div class="caption">
             <h3 class="pull-right">@Model.Price.ToString("c")</h3>
             <h3>
-                <a asp-controller="Products" asp-action="Details" asp-route-id="@Model.">@Model.Name</a>
+                <a asp-area="Customer" asp-controller="Product" asp-action="Details" asp-route-id="@Model.Id">@Model.Name</a>
             </h3>
             <p>@Model.Description</p>
         </div>
