--- a/MarketWeb/Areas/Customer/Views/Product/Details.cshtml
+++ b/MarketWeb/Areas/Customer/Views/Product/Details.cshtml
@@ -10,8 +10,8 @@
         </h3>
         <h4>@Model.Product.Description</h4>
         <p class="button">
-            <a class="btn btn-primary" asp-controller="ShoppingCart" asp-action="AddToShoppingCart"
-               asp-route-pieId="@Model.Product.Id">Add to cart</a>
+            <a class="btn btn-primary" asp-area="Customer" asp-controller="ShoppingCart" asp-action="AddToShoppingCart"
+               asp-route-productId="@Model.Product.Id">Add to cart</a>
         </p>
     </div>
 </div>
