--- a/MarketWeb/Views/Shared/_ProductCard.cshtml
+++ b/MarketWeb/Views/Shared/_ProductCard.cshtml
@@ -14,7 +14,8 @@
         <div class="addToCart">
             <p class="button">
                 <a class="btn btn-primary"
-                   asp-controller="ShoppingCarts"
+                   asp-area="Customer"
+                   asp-controller="ShoppingCart"
                    asp-action="AddToShoppingCart"
                    asp-route-productId="@Model.Id">Add to cart</a>
             </p>
